--- a/src/components/SettingsMenu/SettingsMenu.scss
+++ b/src/components/SettingsMenu/SettingsMenu.scss
@@ -23,8 +23,8 @@ button {
 
 .settings__open-button {
   position: absolute;
-  top: 8px;
-  right: 8px;
+  top: 2vmax;
+  right: 2vmax;
   z-index: 1;
   border-radius: 100%;
   height: 32px;
@@ -47,7 +47,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: min(64px, 4vh);
+  padding-top: 12vh;
 }
 
 .settings__menu {
