adjusted HUD and changed font

--- a/src/components/HUD/HUD.scss
+++ b/src/components/HUD/HUD.scss
@@ -7,14 +7,16 @@
   backdrop-filter: blur(16px);
   border-top: rgba(200, 200, 200, 0.8) solid 1px;
   border-left: rgba(200, 200, 200, 0.8) solid 1px;
-  outline: none;
   color: rgb(240, 240, 240);
 
-  width: min(36vw, 360px);
-  height: min(12vw, 120px);
+  width: 16vw;
+  min-width: 120px;
+  height: 6vw;
+  min-height: 64px;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 0.8rem;
 }
