--- a/src/components/HUD/HUD.scss
+++ b/src/components/HUD/HUD.scss
@@ -14,9 +14,10 @@
   height: 6vw;
   min-height: 64px;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 0px 16px;
+  grid-template-rows: 1.2rem 1.2rem;
+  align-content: center;
   font-size: 0.8rem;
 }
