improved resource management

--- a/src/components/VFX/LootPopup.scss
+++ b/src/components/VFX/LootPopup.scss
@@ -1,6 +1,10 @@
 .loot-popup {
   animation: lootFadeUp 2s ease-out forwards;
   font-family: inherit;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3px;
 }
 
 .loot-popup__text {
